# scalable-renderer

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Node.cpp  Node.h  Octree.cpp  Octree.h  PLYReader.cpp  PLYWriter.cpp  PLYWriter.h  Plane.cpp  Plane.h  README.md  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  TriangleMesh.cpp  TriangleMesh.h  Utils.cpp  Utils.h  VisibilityComputer.cpp  VisibilityComputer.h  main.cpp  tilemap.tmx
museum/: tilemap.tmx  tiles.tsx
shaders/: basic.frag  basic.vert
